Run action on all git push.

--- a/.github/workflows/013-electrons.yml
+++ b/.github/workflows/013-electrons.yml
@@ -1,13 +1,5 @@
 name: Build Docker Images
-on:
-  push:
-    branches:
-      - 'master'
-    tags:
-      - 'v*'
-  pull_request:
-    branches:
-      - 'master'
+on: ['push']
 jobs:
   evgen:
     runs-on: ubuntu-latest
