--- a/.github/workflows/013-electrons.yml
+++ b/.github/workflows/013-electrons.yml
@@ -17,12 +17,11 @@ jobs:
         with:
           path: ./electronGun_evgen.slcio
           key: events-${{ hashFiles('evtgen/013-electrongun/gen_electron_gun.py') }}
-      - name: Setup Environment
-        if: steps.cache-evgen.outputs.cache-hit != 'true'
-        run: source /opt/ilcsoft/muonc/init_ilcsoft.sh
       - name: Generate Events
         if: steps.cache-evgen.outputs.cache-hit != 'true'
-        run: python evtgen/013-electrongun/gen_electron_gun.py -o electronGun_evgen.slcio -n 10 && ls
+        run: |
+          source /opt/ilcsoft/muonc/init_ilcsoft.sh
+          python evtgen/013-electrongun/gen_electron_gun.py -o electronGun_evgen.slcio -n 10 && ls
   sim:
     runs-on: ubuntu-latest
     container: infnpd/mucoll-ilc-framework:1.6-centos8
@@ -40,9 +39,48 @@ jobs:
         with:
           path: ./electronGun_evgen.slcio
           key: events-${{ hashFiles('evtgen/013-electrongun/gen_electron_gun.py') }}
-      - name: Setup Environment
-        run: source /opt/ilcsoft/muonc/init_ilcsoft.sh
+      -
+        id: cache-sim
+        name: Cache Simulation
+        uses: actions/cache@v2
+        with:
+          path: ./electronGun_sim.slcio
+          key: events-${{ hashFiles('simulation/013-electrongun/sim_steer.py') }}
       - name: test for files
         run: ls
       - name: Simulate Events
-        run: ddsim --inputFiles electronGun_evgen.slcio --outputFile electronGun_sim.slcio --steeringFile simulation/013-electrongun/sim_steer.py
+        if: steps.cache-sim.outputs.cache-hit != 'true'
+        run: |
+          source /opt/ilcsoft/muonc/init_ilcsoft.sh
+          ddsim --inputFiles electronGun_evgen.slcio --outputFile electronGun_sim.slcio --steeringFile simulation/013-electrongun/sim_steer.py
+  reco:
+    runs-on: ubuntu-latest
+    container: infnpd/mucoll-ilc-framework:1.6-centos8
+    needs: sim
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      -
+        id: cache-sim
+        name: Cache Simulation
+        uses: actions/cache@v2
+        with:
+          path: ./electronGun_sim.slcio
+          key: events-${{ hashFiles('simulation/013-electrongun/sim_steer.py') }}
+      -
+        id: cache-reco
+        name: Cache Event Generation
+        uses: actions/cache@v2
+        with:
+          path: ./electronGun_evgen.slcio
+          key: events-${{ hashFiles('reconstruction/013-electrongun/reco_steer_all.xml') }}
+      - name: test for files
+        run: ls
+      - name: Reconstruct Events
+        if: steps.cache-reco.outputs.cache-hit != 'true'
+        run: |
+          source /opt/ilcsoft/muonc/init_ilcsoft.sh
+          Marlin --global.LCIOInputFiles=electronGun_sim.slcio --Output_REC.LCIOOutputFile=electronGun_reco.slcio reconstruction/013-electrongun/reco_steer_all.xml
