Use docker volume mount path for consistent Pandora config paths.

--- a/.github/workflows/013-electrons.yml
+++ b/.github/workflows/013-electrons.yml
@@ -54,6 +54,8 @@ jobs:
   reco:
     runs-on: ubuntu-latest
     container: infnpd/mucoll-ilc-framework:1.6-centos8
+    volumes:
+      - reconstruction/013-electrongun:/data/config
     needs: sim
     steps:
       -
@@ -79,4 +81,4 @@ jobs:
         if: steps.cache-reco.outputs.cache-hit != 'true'
         run: |
           source /opt/ilcsoft/muonc/init_ilcsoft.sh
-          Marlin --global.LCIOInputFiles=electronGun_sim.slcio --MyDDMarlinPandora.PandoraSettingsXmlFile=reconstruction/013-electrongun/PandoraSettings/PandoraSettingsDefault.xml --Output_REC.LCIOOutputFile=electronGun_reco.slcio reconstruction/013-electrongun/reco_steer_all.xml
+          Marlin --global.LCIOInputFiles=electronGun_sim.slcio --Output_REC.LCIOOutputFile=electronGun_reco.slcio reconstruction/013-electrongun/reco_steer_all.xml
